<?xml version="1.0" encoding="utf-8"?>
    <!--/**-->
    <!--* @file layout\activity_main.xml -->
    <!--* @author Melanie Roy-Plommer-->
    <!--* @version 1.0-->
    <!--*-->
    <!--* @section DESCRIPTION-->
    <!--* <  >-->
    <!--*-->
    <!--* @section LICENSE-->
    <!--* Copyright 2018 - 2019-->
    <!--* Permission to use, copy, modify, and/or distribute this software for-->
    <!--* any purpose with or without fee is hereby granted, provided that the-->
    <!--* above copyright notice and this permission notice appear in all copies.-->
    <!--*-->
    <!--* THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES-->
    <!--* WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF-->
    <!--* MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR-->
    <!--* ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES-->
    <!--* WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN-->
    <!--* ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF-->
    <!--* OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.-->
    <!--*-->
    <!--* @section Academic Integrity-->
    <!--* I certify that this work is solely my own and complies with-->
    <!--* NBCC Academic Integrity Policy (policy 1111)-->
    <!--*/-->


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/items_count"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item1"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem1"
        app:layout_constraintStart_toStartOf="@+id/textViewItem1"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem1" />

    <TextView
        android:id="@+id/textViewItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item3"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem2"
        app:layout_constraintStart_toStartOf="@+id/textViewItem2"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem2" />

    <TextView
        android:id="@+id/textViewItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item4"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem3"
        app:layout_constraintStart_toStartOf="@+id/textViewItem3"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem3" />

    <TextView
        android:id="@+id/textViewItem5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item5"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem4"
        app:layout_constraintStart_toStartOf="@+id/textViewItem4"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem4" />

    <TextView
        android:id="@+id/textViewItem6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item6"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem5"
        app:layout_constraintStart_toStartOf="@+id/textViewItem5"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem5" />

    <TextView
        android:id="@+id/textViewItem7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item7"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem6"
        app:layout_constraintStart_toStartOf="@+id/textViewItem6"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem6" />

    <TextView
        android:id="@+id/textViewItem8"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/item8"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem7"
        app:layout_constraintStart_toStartOf="@+id/textViewItem7"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem7" />

    <TextView
        android:id="@+id/textViewItem9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item9"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem8"
        app:layout_constraintStart_toStartOf="@+id/textViewItem8"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem8" />

    <TextView
        android:id="@+id/textViewItem10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item10"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textViewItem9"
        app:layout_constraintStart_toStartOf="@+id/textViewItem9"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem9" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:onClick="launchItemsActivity"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem10" />

</android.support.constraint.ConstraintLayout>